--- a/index.html
+++ b/index.html
@@ -78,14 +78,8 @@
 }
 
 
-				else if( what_is_it = "hospital"){
-					score += 10;
-					alert("Try not to get your brains eaten again!");
-					alert("Your score is " + score);
-					alert("Close this alert when 10m away from Hospital");
-}
 
-				else if( what_is_it = "Weapons"){
+				else {
 					score += 10;
 					alert("Go defeat the zombies!");
 					alert("Your score is " + score);
