--- a/index.html
+++ b/index.html
@@ -70,21 +70,11 @@
 				all_markers[i].setMap(null);
 
 
-				if( what_is_it = "zombie"){
+				if( what_is_it != "zombie"){
 						alert("You killed the zombie");
+					        score += 10
 						alert("Your score is " + score);
 						alert("Close this alert when 10m away from Zombie");
-
-}
-
-
-
-				else {
-					score += 10;
-					alert("Go defeat the zombies!");
-					alert("Your score is " + score);
-					alert("Close this alert when 10m away from Weapons Cache");
-
 
 }
 }
