--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<script>
     	     var zombie_map;
 	     var score = 0;
-	     var tolerance = 20;
+	     var tolerance = 10;
 	     var old_position;
 	     var all_markers = []
 	     var data = `-25.990146590154253 28.00797790288925 Hospital.png
@@ -70,7 +70,7 @@
 				all_markers[i].setMap(null);
 
 
-				if( what_is_it != "zombie"){
+				if( what_is_it !== "zombie"){
 						alert("You killed the zombie");
 					        score += 10
 						alert("Your score is " + score);
